--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="Main">
-        <h1>Тестовое приложение</h1>
+        <h1>Планировщик задач</h1>
         <p></p>
-        <button class="btn f-btn">Тест отправки данных</button>
+        <button class="btn f-btn">добавить задачу</button>
     </div>
     <form class="test-form">    
         <input type="text" placeholder="Введите заголовок" class="title-inp">
