--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TakQuiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="Main">
-        <h1>Планировщик задач</h1>
-        <p></p>
-        <button class="btn f-btn">добавить задачу</button>
+        <h1 class="title">TakQuiz</h1>
+        <div class="image">
+            <img src="plane.png" class="imagesrc">
+        </div>
+        <button class="btn f-btn">Start Quiz</button>
     </div>
     <form class="test-form">    
         <input type="text" placeholder="Введите заголовок" class="title-inp">
