--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="Main">
         <h1 class="title">TakQuiz</h1>
-        <div class="image">
-            <img src="plane.png" class="imagesrc">
+        <div class="image" id="imageplane">
+            <img src="plane.png" class="imagesrc" id="plane">
         </div>
         <button class="btn f-btn">Start Quiz</button>
     </div>
