--- a/index.html
+++ b/index.html
@@ -8,18 +8,51 @@
 </head>
 <body>
     <div class="Main">
-        <h1 class="title">TakQuiz</h1>
+        <h1 class="title" id="title">TakQuiz</h1>
         <div class="image" id="imageplane">
             <img src="plane.png" class="imagesrc" id="plane">
         </div>
         <button class="btn f-btn">Start Quiz</button>
     </div>
-    <form class="test-form">    
-        <input type="text" placeholder="Введите заголовок" class="title-inp">
-        <input type="text" placeholder="Введите описание" class="desc-inp">
-        <input type="text" placeholder="Введите текст" class="text-inp">
-        <button class="btn s-btn">Отправить</button>
-    </form>
+    <!-- Экран с квизами -->
+     <div class="quiz" id="quiz">
+        <div class="quizTitle" id="quizTitle">
+            <h1 class="titleSec">Select quiz</h1>
+        </div>
+        <div class="quizes" id="quizes">
+            <div class="row"></div>
+            <div class="row">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+            </div>
+            <div class="row">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+            </div>
+            <div class="row">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+            </div>
+            <div class="row">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+            </div>
+            <div class="row">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg">
+            </div>
+        </div>
+     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="main.js"></script>
