--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
         <div class="quizes" id="quizes">
             <div class="row"></div>
             <div class="row">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg" id="1">
+                <img src="xrest.svg" alt="" class="freeimg" id="2">
+                <img src="xrest.svg" alt="" class="freeimg" id="3">
+                <img src="xrest.svg" alt="" class="freeimg" id="4">
             </div>
             <div class="row">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg" id="5">
+                <img src="xrest.svg" alt="" class="freeimg" id="6">
+                <img src="xrest.svg" alt="" class="freeimg" id="7">
+                <img src="xrest.svg" alt="" class="freeimg" id="8">
             </div>
             <div class="row">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg" id="9">
+                <img src="xrest.svg" alt="" class="freeimg" id="10">
+                <img src="xrest.svg" alt="" class="freeimg" id="11">
+                <img src="xrest.svg" alt="" class="freeimg" id="12">
             </div>
             <div class="row">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg" id="13">
+                <img src="xrest.svg" alt="" class="freeimg" id="14">
+                <img src="xrest.svg" alt="" class="freeimg" id="15">
+                <img src="xrest.svg" alt="" class="freeimg" id="16">
             </div>
             <div class="row">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
-                <img src="xrest.svg" alt="" class="freeimg">
+                <img src="xrest.svg" alt="" class="freeimg" id="17">
+                <img src="xrest.svg" alt="" class="freeimg" id="18">
+                <img src="xrest.svg" alt="" class="freeimg" id="19">
+                <img src="xrest.svg" alt="" class="freeimg" id="20">
             </div>
         </div>
      </div>
